# nyc-taxi-trip-dwh-pipeline

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
Task/: pipeline.py  scraping.py
Task/utils/: pg_utils.py
config/: config.toml  config.yaml
data/: download_links.json
nyc_raw_data/: download_links.json
src/: data_download.py  pipeline.py  scraping.py
