[tool.poetry]
name = "data-engineering"
version = "0.1.0"
description = "Repo to setup a data engineering task"
authors = ["Harisyam Manda <mnv.harisyam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
beautifulsoup4 = "^4.10.0"
click = "^8.0.3"
hydra-core = "^1.1.1"
httpx = "^0.21.3"
prefect = {extras = ["viz"], version = "^0.15.13"}
rich = "^11.0.0"
tqdm = "^4.62.3"
PyYAML = "^6.0"
toml = "^0.10.2"
pyarrow = "^7.0.0"
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pandas = "^1.4.0"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
